--- a/src/pages/humidity/humidity.html
+++ b/src/pages/humidity/humidity.html
@@ -1,14 +1,15 @@
 <ion-header>
+
   <ion-navbar>
+    <ion-title>Luftbefeuchter</ion-title>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-
-    <ion-title>Zuel MultiSwitch</ion-title>
   </ion-navbar>
+
 </ion-header>
 
 
-<ion-content>
-  <p>Home here</p>
+<ion-content padding>
+
 </ion-content>
