--- a/src/pages/light/light.html
+++ b/src/pages/light/light.html
@@ -9,14 +9,76 @@
 
 
 <ion-content padding>
+
   <ion-list>
     <ion-item>
-      <ion-toggle item-start [(ngModel)]="sensor.isweekplan" name="isweekplan"></ion-toggle>
-      <ion-label>Zeitplan erstellen</ion-label>
+      <ion-label>Zustand</ion-label>
+      <ion-toggle item-end [(ngModel)]="currentvalue.sensorvalue" (ionChange)="onUpdateToggle($event)" ></ion-toggle>
+      {{ currentvalue.sensorvalue }}
+    </ion-item>
+
+    <ion-item *ngIf="sensor.ison">
+      <ion-label>Licht an</ion-label>
+      <ion-icon name="bulb" item-start></ion-icon>
+    </ion-item>
+
+    <ion-item *ngIf="!sensor.ison">
+      <ion-label>Licht aus</ion-label>
+      <ion-icon name="hangout" item-start></ion-icon>
     </ion-item>
   </ion-list>
 
-  <ion-grid *ngIf="sensor.isweekplan" >
+  <ion-list>
+
+    <ion-item>
+      <ion-label>Steuerung</ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Verschieben in Minuten</ion-label>
+      <ion-input type="number"></ion-input>
+      <ion-icon name="watch" item-start></ion-icon>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Zufällig verschieben </ion-label>
+      <ion-toggle [(ngModel)]="sensor.israndom" item-end>Zufall</ion-toggle>
+      <ion-icon name="sync" item-start></ion-icon>
+    </ion-item>
+    <!--
+    <ion-item>
+      <ion-label>Werte speichern</ion-label>
+      <ion-toggle [(ngModel)]="sensor.ishistory" item-end></ion-toggle>
+      <ion-icon name="apps" item-start></ion-icon>
+    </ion-item>
+
+    <ion-item *ngIf="sensor.ishistory">
+      <ion-label>Gespeicherte Werte</ion-label>
+      <ion-icon name="clipboard" item-start></ion-icon>
+    </ion-item>
+
+  </ion-list>
+
+    <ion-list *ngIf="sensor.ishistory">
+      <ion-item *ngFor="let val of sensor.history ">
+        <p>{{ val.datetime }} {{ val.sensorvalue }} </p>
+        <ion-icon item-start name="bulb"></ion-icon>
+      </ion-item>-->
+  </ion-list>
+
+  <ion-list>
+<ion-item>
+  <ion-label>Zeitplan</ion-label>
+</ion-item>
+    <ion-item>
+      <ion-toggle item-end [(ngModel)]="sensor.isweekplan" name="isweekplan"></ion-toggle>
+      <ion-label>Verwalten</ion-label>
+      <ion-icon item-start name="calendar"></ion-icon>
+    </ion-item>
+
+  </ion-list>
+
+  <ion-grid *ngIf="sensor.isweekplan">
     <!--- Header Row -->
     <ion-row>
       <ion-col width-25>
@@ -25,46 +87,47 @@
         </ion-item>
       </ion-col>
       <ion-col width-25>
-          <ion-item>
-              Von
-            </ion-item>
+        <ion-item>
+          Von
+        </ion-item>
       </ion-col>
       <ion-col width-25>
-          <ion-item>
-              Bis
-            </ion-item>
+        <ion-item>
+          Bis
+        </ion-item>
       </ion-col>
       <ion-col width-25>
-          <ion-item>
-              Wert
-            </ion-item>
+        <ion-item>
+          Wert
+        </ion-item>
       </ion-col>
     </ion-row>
     <!--- Header Row -->
 
-        <!--- Data Rows -->
-        <ion-row *ngFor="let day of sensor.sensorweek" >
-            <ion-col width-25>
-              <ion-item>
-                {{ day.day }}
-              </ion-item>
-            </ion-col>
-            <ion-col width-25>
-                <ion-item>
-                    {{ day.fromtime }}
-                  </ion-item>
-            </ion-col>
-            <ion-col width-25>
-                <ion-item>
-                    {{ day.totime }}
-                  </ion-item>
-            </ion-col>
-            <ion-col width-25>
-                <ion-item>
-                    {{ day.setvalue }}
-                  </ion-item>
-            </ion-col>
-          </ion-row>
-          <!--- Data Rows -->
+    <!--- Data Rows -->
+    <ion-row *ngFor="let day of sensor.sensorweek">
+      <ion-col width-25>
+        <ion-item>
+          {{ day.day }}
+        </ion-item>
+      </ion-col>
+      <ion-col width-25>
+        <ion-item>
+          {{ day.fromtime }}
+        </ion-item>
+      </ion-col>
+      <ion-col width-25>
+        <ion-item>
+          {{ day.totime }}
+        </ion-item>
+      </ion-col>
+      <ion-col width-25>
+        <ion-item>
+          {{ day.setvalue }}
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <!--- Data Rows -->
   </ion-grid>
+
 </ion-content>
