--- a/src/pages/sensors/sensors.html
+++ b/src/pages/sensors/sensors.html
@@ -1,5 +1,7 @@
-<ion-tabs>
-    <ion-tab [root]="lightRoot" tabTitle="Beleuchtung" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="humidityRoot" tabTitle="Luftbefeuchter" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="temperatureRoot" tabTitle="Heizung" tabIcon="information-circle"></ion-tab>
-</ion-tabs>
+    <ion-tabs>
+        <!--<ion-tab [root]="deviceRoot" tabTitle="Gerät" tabIcon="information-circle"></ion-tab> -->
+        <ion-tab [root]="lightRoot" tabTitle="Beleuchtung" tabIcon="information-circle"></ion-tab>
+        <ion-tab [root]="humidityRoot" tabTitle="Luftbefeuchter" tabIcon="information-circle"></ion-tab>
+        <ion-tab [root]="temperatureRoot" tabTitle="Heizung" tabIcon="information-circle"></ion-tab>
+    </ion-tabs>
+
