--- a/src/pages/device-details/device-details.html
+++ b/src/pages/device-details/device-details.html
@@ -1,18 +1,13 @@
-<!--
-  Generated template for the DeviceDetailsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>device-details</ion-title>
+    <ion-title style="margin-left: 45px"> Gerät</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+{{ device | json }}
 </ion-content>
