--- a/src/pages/device-list/device-list.html
+++ b/src/pages/device-list/device-list.html
@@ -35,7 +35,7 @@
   </ion-list>
 
   <ion-list>
-    <button ion-item *ngFor="let device of devices">
+    <button ion-item *ngFor="let device of devices" (click)="deviceSelected(device)" >
       <h2>{{ device.name || 'Unnamed' }}</h2>
       <p>{{ device.id }}</p>
       <p>RSSI: {{ device.rssi }}</p>
