--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,12 +3,36 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-
-    <ion-title>Zuel MultiSwitch</ion-title>
+    <ion-title text-center>MultiSwitch</ion-title>
   </ion-navbar>
 </ion-header>
 
 
-<ion-content>
-  <p>Home here</p>
+<ion-content padding>
+  <ion-card>
+    <img src="../../assets/imgs/beleuchtung.jpg" alt="Multiswitch">
+    <ion-card-header>
+      <ion-card-title text-center>MultiSwitch</ion-card-title>
+      <h3 text-center>Eine digitale Schaltuhr für</h3>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="bulb" item-start></ion-icon>
+          Beleuchtung
+        </ion-item>
+        <ion-item>
+          <ion-icon name="water" item-start></ion-icon>
+          Luftbefeuchter
+        </ion-item>
+        <ion-item>
+          <ion-icon name="thermometer" item-start></ion-icon>
+          Heizung
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+
+
+  </ion-card>
 </ion-content>
