--- a/src/pages/sensors/sensors.html
+++ b/src/pages/sensors/sensors.html
@@ -1,4 +1,4 @@
-    <ion-tabs>
+    <ion-tabs tabsPlacement="top">
         <!--<ion-tab [root]="deviceRoot" tabTitle="Gerät" tabIcon="information-circle"></ion-tab> -->
         <ion-tab [root]="lightRoot" tabTitle="Beleuchtung" tabIcon="information-circle"></ion-tab>
         <ion-tab [root]="humidityRoot" tabTitle="Luftbefeuchter" tabIcon="information-circle"></ion-tab>
