--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,14 +3,14 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title text-center>MultiSwitch</ion-title>
+    <ion-title></ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
   <ion-card>
-    <img src="../../assets/imgs/beleuchtung.jpg" alt="Multiswitch">
+    <img src="../../assets/imgs/beleuchtung.jpg" >
     <ion-card-header>
       <ion-card-title text-center>MultiSwitch</ion-card-title>
       <h3 text-center>Eine digitale Schaltuhr für</h3>
