--- a/src/pages/light/light.html
+++ b/src/pages/light/light.html
@@ -12,17 +12,20 @@
 
   <ion-list>
     <ion-item>
+      Sensor id:{{ sensor.id }}
+    </ion-item>
+    <ion-item>
       <ion-label>Zustand</ion-label>
-      <ion-toggle item-end [(ngModel)]="currentvalue.sensorvalue" (ionChange)="onUpdateToggle($event)" ></ion-toggle>
-      {{ currentvalue.sensorvalue }}
+      <ion-toggle item-end [(ngModel)]="sensorvalue" (ionChange)="onUpdateToggle($event)" ></ion-toggle>
+      {{ sensorvalue }}
     </ion-item>
 
-    <ion-item *ngIf="sensor.ison">
+    <ion-item *ngIf="sensor">
       <ion-label>Licht an</ion-label>
       <ion-icon name="bulb" item-start></ion-icon>
     </ion-item>
 
-    <ion-item *ngIf="!sensor.ison">
+    <ion-item *ngIf="!sensor">
       <ion-label>Licht aus</ion-label>
       <ion-icon name="hangout" item-start></ion-icon>
     </ion-item>
@@ -39,13 +42,13 @@
       <ion-input type="number"></ion-input>
       <ion-icon name="watch" item-start></ion-icon>
     </ion-item>
-
+  <!--
     <ion-item>
       <ion-label>Zufällig verschieben </ion-label>
-      <ion-toggle [(ngModel)]="sensor.israndom" item-end>Zufall</ion-toggle>
+      <ion-toggle [(ngModel)]="sensor.sensorplan" item-end>Zufall</ion-toggle>
       <ion-icon name="sync" item-start></ion-icon>
     </ion-item>
-    <!--
+  
     <ion-item>
       <ion-label>Werte speichern</ion-label>
       <ion-toggle [(ngModel)]="sensor.ishistory" item-end></ion-toggle>
@@ -71,14 +74,14 @@
   <ion-label>Zeitplan</ion-label>
 </ion-item>
     <ion-item>
-      <ion-toggle item-end [(ngModel)]="sensor.isweekplan" name="isweekplan"></ion-toggle>
+      <ion-toggle item-end [(ngModel)]="sensor" name="isplan"></ion-toggle>
       <ion-label>Verwalten</ion-label>
       <ion-icon item-start name="calendar"></ion-icon>
     </ion-item>
 
   </ion-list>
 
-  <ion-grid *ngIf="sensor.isweekplan">
+  <ion-grid *ngIf="sensor">
     <!--- Header Row -->
     <ion-row>
       <ion-col width-25>
