--- a/src/pages/light/light.html
+++ b/src/pages/light/light.html
@@ -19,7 +19,7 @@
   </ion-list>
    
  <ion-slides pager >
-    <ion-slide *ngFor="let d of sensor.sensorplan.days">
+    <ion-slide *ngFor="let d of sensor.weekplan.days">
       <ion-fab right >
         <button ion-fab color="primary" (click)="addDayplan()">
           <ion-icon name="add"></ion-icon>
