--- a/src/pages/weekplan-daily/weekplan-daily.html
+++ b/src/pages/weekplan-daily/weekplan-daily.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the ReceipeDetailsPage page.
+  Generated template for the weekplanDailyPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>receipe-details$</ion-title>
+    <ion-title>weekplan-daily</ion-title>
   </ion-navbar>
 
 </ion-header>
