--- a/src/pages/sensor-edit/sensor-edit.html
+++ b/src/pages/sensor-edit/sensor-edit.html
@@ -1,66 +1,91 @@
 <ion-header>
-    <ion-navbar>
-      <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
-      </button>
-      <ion-title>{{sensor.sensortypename }} verwalten</ion-title>
-    </ion-navbar>
-  </ion-header>
-  
-  
-  <ion-content padding>
-  
-    <form #f="ngForm" (onSubmit)="saveWeekplan(f)">
-      <ion-list>
-  
-        <ion-item>
-          <ion-label>Beleuchtung ist eingeschaltet</ion-label>
-          <ion-toggle name="ison" [(ngModel)]="sensor.ison"></ion-toggle>
-        </ion-item>
-  
-        <ion-item>
-          <ion-label>Beleuchtung Sollwert</ion-label>
-          <ion-input name="sensorsetvalue" [(ngModel)]="sensor.sensorsetvalue"></ion-input>
-        </ion-item>
-  
-        <ion-item>
-          <ion-label>Werte aufzeichnen</ion-label>
-          <ion-toggle name="islog" [(ngModel)]="sensor.islog"></ion-toggle>
-        </ion-item>
-  
-        <ion-item>
-          <ion-label>Mit Zeitplan</ion-label>
-          <ion-toggle name="isweekplan" [(ngModel)]="sensor.isweekplan"></ion-toggle>
-        </ion-item>
-  
-        <ion-item>
-          <ion-label>Wiederholen</ion-label>
-          <ion-select name="scheduletype" [(ngModel)]="sensor.scheduletype">
-            <ion-option value="daily">Täglich</ion-option>
-            <ion-option value="weekly">Wöchentlich</ion-option>
-          </ion-select>
-        </ion-item>
-  
-        
-          <ion-slides>
-            <ion-slide *ngFor="let day of weekplan.sensordays">
-              {{ day.day }} <hr>
-            
-              <ion-list>
-                <ion-item *ngFor="let dayplan of day.dayplans">
-                  Startzeit: {{dayplan.setstarttime }} <hr>
-                  Endzeit: {{ dayplan.setendtime }} 
-                </ion-item>
-              </ion-list>
-  
-            </ion-slide>
-          </ion-slides>
-  
-  
-  
-      </ion-list>
-  
-  
-  
-    </form>
-  </ion-content>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>{{sensor.sensortypename }} verwalten</ion-title>
+  </ion-navbar>
+</ion-header>
+
+
+<ion-content padding>
+
+  <form [formGroup]="sensorEditForm" (onSubmit)="saveWeekplan()">
+    <ion-list>
+
+      <ion-item>
+        <ion-label>{{ sensor.sensortype.displayname}} ist eingeschaltet</ion-label>
+        <ion-toggle name="ison" formControlName="ison"></ion-toggle>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>{{ sensor.sensortype.displayname}} Sollwert</ion-label>
+        <ion-input name="sensorsetvalue" formControlName="sensorsetvalue"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Werte aufzeichnen</ion-label>
+        <ion-toggle name="islog" formControlName="islog"></ion-toggle>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Mit Zeitplan</ion-label>
+        <ion-toggle name="isweekplan" formControlName="isweekplan"></ion-toggle>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Wiederholen</ion-label>
+        <ion-select name="scheduletype" formControlName="scheduletype">
+          <ion-option value="daily">Täglich</ion-option>
+          <ion-option value="weekly">Wöchentlich</ion-option>
+        </ion-select>
+      </ion-item>
+
+
+      <div formGroupName="weekplan">
+
+        <ion-slides>
+
+
+          <ion-slide *ngFor="let day of weekplan.sensordays">
+            {{ day.day }}
+
+            <hr>
+
+            <ion-list>
+              <ion-item *ngFor="let dayplan of day.dayplans">
+                <div formGroupName="day">
+
+                  <ion-datetime formControlName="setstarttime" displayFormat="HH:mm"></ion-datetime>
+                  plan Startzeit: {{dayplan.setstarttime }}
+                  <br>
+                  <ion-datetime formControlName="setendtime" displayFormat="HH:mm"></ion-datetime>
+                  plan Endzeit: {{dayplan.setendtime }}
+                  <br>
+                  <br>
+                  <ion-datetime formControlName="starttime" displayFormat="HH:mm"></ion-datetime>
+                  ist Startzeit: {{dayplan.starttime }}
+                  <br>
+                  <ion-datetime formControlName="endtime" displayFormat="HH:mm"></ion-datetime>
+                  ist Endzeit: {{dayplan.endtime }}
+                  <br>
+                </div>
+                <!--- formGroupName="dayplan" -->
+              </ion-item>
+
+            </ion-list>
+
+          </ion-slide>
+          <!--- day slide -->
+
+        </ion-slides>
+
+      </div>
+      <!--- formGroupName="weekplan" -->
+
+    </ion-list>
+
+
+
+  </form>
+</ion-content>
