--- a/src/pages/navigation/navigation.html
+++ b/src/pages/navigation/navigation.html
@@ -15,6 +15,7 @@
     <button ion-button block  (click)="openKuehlgeraet()" >Kühlgerät</button>
     <button ion-button block  (click)="openLuftbefeuchter()" >Luftbefeuchter</button>
     <button ion-button block  (click)="openLufttrockner()" >Lufttrockner</button>
+    <button ion-button block  (click)="openWeekplan()" >Weekplan</button>
   </ion-item>
 </ion-list>
 </ion-content>
