--- a/src/pages/weekplan/weekplan.html
+++ b/src/pages/weekplan/weekplan.html
@@ -1,6 +1,7 @@
 <ion-header>
-    <h2>{{ sensortypename }}</h2>
+    <h2>{{ displayname }}</h2>
 </ion-header>
+
 <ion-content>
     <form [formGroup]="weekplanForm">
 
